tooling/nargo_cli/tests/snapshots/compile_failure/constrain_typo/execute__tests__constrain_typo_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: Unused expression result of type bool
  ┌─ src/main.nr:6:14
  │
6 │     constrai x != y;
  │              ------
  │

error: cannot find `constrai` in this scope
  ┌─ src/main.nr:6:5
  │
6 │     constrai x != y;
  │     -------- not found in this scope
  │

error: Expected a ; separating these two statements
  ┌─ src/main.nr:6:5
  │
6 │     constrai x != y;
  │     --------
  │

Aborting due to 2 previous errors
