tooling/nargo_cli/tests/snapshots/compile_failure/constrain_typo/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Unused expression result of type bool
  ┌─ src/main.nr:6:14
  │
6 │     constrai x != y;
  │              ------
  │

error: Expected a ; separating these two statements
  ┌─ src/main.nr:6:5
  │
6 │     constrai x != y;
  │     --------
  │

error: cannot find `constrai` in this scope
  ┌─ src/main.nr:6:5
  │
6 │     constrai x != y;
  │     -------- not found in this scope
  │

Aborting due to 2 previous errors
